Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <!-- Logo UNCISAL -->
             <div class="flex flex-col items-center mb-8 gap-2">
                 <div class="w-24 h-24 flex items-center justify-center mb-2">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Bras%C3%A3o_da_UNCISAL.png" alt="Brasão UNCISAL" class="w-full h-full object-contain">
+                    <img src="https://drive.google.com/file/d/1FY6aBOtF6-9zskXIwhqgBMYuWiVR7LSH/view?usp=drive_link" alt="Brasão UNCISAL" class="w-full h-full object-contain">
                 </div>
                 <div class="flex flex-col">
                     <span class="font-bold text-slate-900 text-2xl tracking-widest uppercase mb-1">UNCISAL</span>
