--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 A Anatomia do <br><span class="gradient-text">Conhecimento Médico</span>
             </h1>
             <p class="text-xl md:text-2xl text-slate-600 mb-12 max-w-3xl mx-auto font-light serif leading-relaxed">
-                Um guia definitivo para dominar a complexidade médica através da Inteligência Artificial, fundamentado na Técnica Feynman e no Aprendizado em Espiral.
+                Um guia para dominar a complexidade médica através da Inteligência Artificial, fundamentado na Técnica Feynman e no Aprendizado em Espiral.
             </p>
             
             <div class="flex flex-col sm:flex-row gap-5 justify-center items-center mb-16 relative z-50">
