Update UNCISAL logo and version number

--- a/index.html
+++ b/index.html
@@ -147,10 +147,13 @@
         <div class="absolute inset-0 opacity-5 bg-[radial-gradient(#2563eb_1px,transparent_1px)] [background-size:20px_20px] pointer-events-none" style="z-index: 0;"></div>
         
         <div class="relative z-10 max-w-5xl animate-fade-in py-12 w-full">
-            <!-- Logo UNCISAL -->
+            <!-- Logo UNCISAL (Ícone Robusto como Fallback) -->
             <div class="flex flex-col items-center mb-8 gap-2">
-                <div class="w-24 h-24 flex items-center justify-center mb-2">
-                    <img src="https://drive.google.com/file/d/1FY6aBOtF6-9zskXIwhqgBMYuWiVR7LSH/view?usp=drive_link" alt="Brasão UNCISAL" class="w-full h-full object-contain">
+                <div class="w-24 h-24 bg-blue-50 rounded-full flex items-center justify-center mb-2 shadow-sm border-4 border-blue-100">
+                    <i class="fas fa-university text-5xl text-blue-800"></i>
+                    <!-- Se você tiver o link direto do brasão, substitua a linha acima por: 
+                    <img src="URL_DO_BRASAO.png" alt="Brasão UNCISAL" class="w-full h-full object-contain rounded-full"> 
+                    -->
                 </div>
                 <div class="flex flex-col">
                     <span class="font-bold text-slate-900 text-2xl tracking-widest uppercase mb-1">UNCISAL</span>
@@ -162,7 +165,7 @@
                 A Anatomia do <br><span class="gradient-text">Conhecimento Médico</span>
             </h1>
             <p class="text-xl md:text-2xl text-slate-600 mb-12 max-w-3xl mx-auto font-light serif leading-relaxed">
-                Um guia para dominar a complexidade médica através da Inteligência Artificial, fundamentado na Técnica Feynman e no Aprendizado em Espiral.
+                Um guia interativo para dominar a complexidade médica através da Inteligência Artificial, fundamentado na Técnica Feynman e no Aprendizado em Espiral.
             </p>
             
             <div class="flex flex-col sm:flex-row gap-5 justify-center items-center mb-16 relative z-50">
@@ -190,7 +193,7 @@
                     <div class="grid grid-cols-2 gap-x-8 gap-y-1 text-xs text-slate-500 font-mono">
                         <span class="text-right font-bold text-slate-400">Criação:</span> <span>01/01/2026</span>
                         <span class="text-right font-bold text-slate-400">Atualização:</span> <span>02/01/2026</span>
-                        <span class="text-right font-bold text-slate-400">Versão:</span> <span>2.8</span>
+                        <span class="text-right font-bold text-slate-400">Versão:</span> <span>2.9</span>
                         <span class="text-right font-bold text-slate-400">Palavras:</span> <span>~2500</span>
                         <span class="text-right font-bold text-slate-400">Tempo de leitura:</span> <span>~13 min</span>
                     </div>
