Update version number to 3.0 and add link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="grid grid-cols-2 gap-x-8 gap-y-1 text-xs text-slate-500 font-mono">
                         <span class="text-right font-bold text-slate-400">Criação:</span> <span>01/01/2026</span>
                         <span class="text-right font-bold text-slate-400">Atualização:</span> <span>02/01/2026</span>
-                        <span class="text-right font-bold text-slate-400">Versão:</span> <span>2.9</span>
+                        <span class="text-right font-bold text-slate-400">Versão:</span> <span>3.0</span>
                         <span class="text-right font-bold text-slate-400">Palavras:</span> <span>~2500</span>
                         <span class="text-right font-bold text-slate-400">Tempo de leitura:</span> <span>~13 min</span>
                     </div>
@@ -577,6 +577,13 @@
                         <h4 class="text-xl font-bold text-slate-900">7. Doutorando</h4>
                         <p class="mt-2 text-slate-600">"Estado da arte e lacunas. Discussão crítica sobre o fenômeno da <strong>histerese</strong>: a perda significativa de pressão sub-bandagem nas primeiras 24h devido à redução rápida do edema, o que pode exigir trocas mais frequentes que o protocolo padrão. Investiga-se o uso de materiais híbridos (rigidez ajustável) e a correlação entre a 'rigidez estática' (Static Stiffness Index) e o desfecho de fechamento da úlcera."</p>
                     </div>
+                    
+                    <!-- Link Adicional (Novo) -->
+                    <div class="mt-12 pt-8 border-t border-slate-100 text-center">
+                        <a href="https://www.usinadepesquisa.com/?p=6790" target="_blank" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-50 text-blue-700 rounded-full font-bold hover:bg-blue-100 transition shadow-sm border border-blue-100">
+                            <i class="fas fa-external-link-alt"></i> Ver Exemplo Adicional Completo
+                        </a>
+                    </div>
                 </div>
             </section>
 
@@ -621,7 +628,7 @@
             <p class="text-slate-400 text-sm mb-2">Maceió • Alagoas</p>
             <p class="text-slate-400 text-xs mt-6 mb-8 uppercase tracking-wide">Disciplina de Pesquisa em Ciências da Saúde</p>
             <div class="text-xs text-slate-300 font-mono">
-                © 2026 Guia de Estudos Médicos com IA v2.8
+                © 2026 Guia de Estudos Médicos com IA v3.0
             </div>
         </div>
     </footer>
